--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,9 @@ spring:
       max-request-size: 30MB #한 번에 최대 업로드 가능 용량
       max-file-size: 10MB #파일 하나의 최대 크기
 
+  profiles:
+    include: oauth
+
 logging:
   level:
     org:
